--- a/src/template.html
+++ b/src/template.html
@@ -20,7 +20,16 @@
 	</head>
 
 	<body>
+    <h1>Bienvenue sur la page de l'origami baleine</h1>
 
+    <p><img src="./images/whale/thumbnails/20-origami-whale.jpg"  alt="origami-whale" title="Origami Whale" width="450" height="338"></p>
+
+    <h2>Liste des outils requis pour la réalisation de l'origami</h2>
+    <li>Une paire de ciseaux</li>
+    <li>Une feuille d'origami</li>
+    <li>Beacoup de patience ! :)</li>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
 	<p>Origami Whale Step 1: Start with a 6 inch x 6 inch (15cm x 15cm) square origami paper, color side down. Fold paper in half on the diagonal axis. Crease well and unfold. </p>
                 					<p><img src="./images/whale/thumbnails/01a-origami-whale.jpg" alt="origami-whale-step-1" title="Origami Whale Step 1" width="450" height="338"> </p>
                 					<p><img src="./images/whale/thumbnails/02-origami-whale.jpg"  alt="origami-whale-step-1" title="Origami Whale Step 1" width="450" height="338"></p>
