--- a/src/index.html
+++ b/src/index.html
@@ -68,18 +68,14 @@
 						<hr />
 						-->
 						<footer>
-							<ul class="icons">
-								<li><a href="template.html" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
-							</ul>
+							<a href="./whale.html" > <img src="./images/whale/thumbnails/logobal.png"/></a>
 						</footer>
 					</section>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Jane Doe</li>
+							<li>&copy; IMAGIRO Team </li>
 							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
