"Commit de penguin"

--- a/src/index.html
+++ b/src/index.html
@@ -67,8 +67,11 @@
 						</form>
 						<hr />
 						-->
+						
 						<footer>
-							<a href="./whale.html" > <img src="./images/whale/thumbnails/logobal.png"/></a>
+						<ul>
+							<li>	<a href="./whale.html" > <img src="./images/whale/thumbnails/logobal.png"/></a></li>
+						<ul>
 						</footer>
 					</section>
 
