--- a/src/penguin.html
+++ b/src/penguin.html
@@ -33,22 +33,22 @@
              Origami Penguin Step 1: Start with a piece of origami paper
  that is black on one (1) side. The other side can be white or orange.<p></p>
 	<p>Fold the paper in half with the non-black side facing out.  Then fold and unfold along the dotted line as shown below right:</p>
-	<p><img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/01-origami-penguin.jpg" alt="01-origami-penguin" title="double-sided origami paper, black and orange" height="337" border="0" width="450">
+	<p><img src="./images/penguin/thumbnails/01-origami-penguin.jpg" alt="01-origami-penguin" title="double-sided origami paper, black and orange" height="337" border="0" width="450">
       <br>
       <br>
-      <img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/02-origami-penguin.jpg" alt="02-origami-penguin" title="paper folded into triangle, then creased down center of triangle" height="337" border="0" width="450"></p>
+      <img src="./images/penguin/thumbnails/02-origami-penguin.jpg" alt="02-origami-penguin" title="paper folded into triangle, then creased down center of triangle" height="337" border="0" width="450"></p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
-	<p>Origami Penguin Step 2:   Now make a squash fold by carefully following the sequence of the next four (4) pictures:<img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/03-origami-penguin.jpg" alt="03-origami-penguin" title="squash fold origami penguin, part 1" height="337" border="0" width="450"><br>
+	<p>Origami Penguin Step 2:   Now make a squash fold by carefully following the sequence of the next four (4) pictures:<img src="./images/penguin/thumbnails/03-origami-penguin.jpg" alt="03-origami-penguin" title="squash fold origami penguin, part 1" height="337" border="0" width="450"><br>
       <br>
-      <img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/04-origami-penguin.jpg" alt="04-origami-penguin" title="squash fold origami penguin, part 2" height="337" border="0" width="450"><br>
-      <br>
-      <br>
-      <img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/05-origami-penguin.jpg" alt="05-origami-penguin" title="squash fold origami penguin, part 3" height="337" border="0" width="450">
+      <img src="./images/penguin/thumbnails/04-origami-penguin.jpg" alt="04-origami-penguin" title="squash fold origami penguin, part 2" height="337" border="0" width="450"><br>
       <br>
       <br>
-      <img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/06-origami-penguin.jpg" alt="06-origami-penguin" title="squash fold origami penguin, part 4" height="337" border="0" width="450">      </p>
+      <img src="./images/penguin/thumbnails/05-origami-penguin.jpg" alt="05-origami-penguin" title="squash fold origami penguin, part 3" height="337" border="0" width="450">
+      <br>
+      <br>
+      <img src="./images/penguin/thumbnails/06-origami-penguin.jpg" alt="06-origami-penguin" title="squash fold origami penguin, part 4" height="337" border="0" width="450">      </p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
@@ -56,17 +56,17 @@
  last four (4) steps on the other side.  It will then look like the 
 photo below left.  Follow the next four (4) photos to make another 
 squash fold:</p>
-	<img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/07-origami-penguin.jpg" alt="07-origami-penguin" title="ready for second set of squash folds" height="337" border="0" width="450">
+	<img src="./images/penguin/thumbnails/07-origami-penguin.jpg" alt="07-origami-penguin" title="ready for second set of squash folds" height="337" border="0" width="450">
     <br>
     <br>
-    <img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/08-origami-penguin.jpg" alt="08-origami-penguin" title="another squash fold origami penguin, part 1" height="337" border="0" width="450">
+    <img src="./images/penguin/thumbnails/08-origami-penguin.jpg" alt="08-origami-penguin" title="another squash fold origami penguin, part 1" height="337" border="0" width="450">
 	<p>
-<img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/09-origami-penguin.jpg" alt="09-origami-penguin" title="another squash fold origami penguin, part 2" height="337" border="0" width="450">
+<img src="./images/penguin/thumbnails/09-origami-penguin.jpg" alt="09-origami-penguin" title="another squash fold origami penguin, part 2" height="337" border="0" width="450">
 <br>
 <br>
-<img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/10-origami-penguin.jpg" alt="10-origami-penguin" title="another squash fold origami penguin, part 3" height="337" border="0" width="450"><br>
+<img src="./images/penguin/thumbnails/10-origami-penguin.jpg" alt="10-origami-penguin" title="another squash fold origami penguin, part 3" height="337" border="0" width="450"><br>
 	</p>
-	<p><img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/11-origami-penguin.jpg" alt="11-origami-penguin" title="another squash fold origami penguin, part 4" height="337" border="0" width="450"></p>
+	<p><img src="./images/penguin/thumbnails/11-origami-penguin.jpg" alt="11-origami-penguin" title="another squash fold origami penguin, part 4" height="337" border="0" width="450"></p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
@@ -74,19 +74,19 @@ squash fold:</p>
 squash fold on the backside.  Then unfold the model along the 
 centerline, moving point A upwards.
 	  </p>
-	<p><img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/12-origami-penguin.jpg" alt="12-origami-penguin" title="after squash folds, ready to unfold along centerline of model" height="337" border="0" width="450">
+	<p><img src="./images/penguin/thumbnails/12-origami-penguin.jpg" alt="12-origami-penguin" title="after squash folds, ready to unfold along centerline of model" height="337" border="0" width="450">
       <br>
       <br>	
-      <img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/13-origami-penguin.jpg" alt="13-origami-penguin" title="origami penguin unfolded" height="337" border="0" width="450"></p>
+      <img src="./images/penguin/thumbnails/13-origami-penguin.jpg" alt="13-origami-penguin" title="origami penguin unfolded" height="337" border="0" width="450"></p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>Origami Penguin Step 5: 	  Now fold point B over as shown, then re-fold the model in half lengthwise as shown.</p>
 	<p>
-<img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/14-origami-penguin.jpg" alt="14-origami-penguin" title="completing the penguin body" height="337" border="0" width="450">
+<img src="./images/penguin/thumbnails/14-origami-penguin.jpg" alt="14-origami-penguin" title="completing the penguin body" height="337" border="0" width="450">
 <br>
 <br>
-<img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/15-origami-penguin.jpg" alt="15-origami-penguin" title="penguin folded along centerline" height="337" border="0" width="450"></p>
+<img src="./images/penguin/thumbnails/15-origami-penguin.jpg" alt="15-origami-penguin" title="penguin folded along centerline" height="337" border="0" width="450"></p>
 	<p><br>
               <!-- InstanceEndEditable --> <!-- InstanceBeginEditable name="content6" --><br>
               </p><p>&nbsp;</p>
@@ -95,11 +95,11 @@ centerline, moving point A upwards.
 penguin towards the front of the body as shown in the two (2) photos 
 below:<p></p>
 	<p>
-<img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/16-origami-penguin.jpg" alt="16-origami-penguin" title="folding the first flipper" height="337" border="0" width="450">
+<img src="./images/penguin/thumbnails/16-origami-penguin.jpg" alt="16-origami-penguin" title="folding the first flipper" height="337" border="0" width="450">
 <br>
 <br>
 <br>
-<img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/17-origami-penguin.jpg" alt="17-origami-penguin" title="flipper folded" height="337" border="0" width="450"></p>
+<img src="./images/penguin/thumbnails/17-origami-penguin.jpg" alt="17-origami-penguin" title="flipper folded" height="337" border="0" width="450"></p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
@@ -110,38 +110,38 @@ Crease the head along the dotted line shown, then make a reverse outside
 penguin while folding the head down.  The result should be like the 
 photo below right:</p>
 	<p>
-<img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/18-origami-penguin.jpg" alt="18-origami-penguin" title="both flippers folded, and ready for head fold" height="337" border="0" width="450">
+<img src="./images/penguin/thumbnails/18-origami-penguin.jpg" alt="18-origami-penguin" title="both flippers folded, and ready for head fold" height="337" border="0" width="450">
 <br>
 <br>
-<img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/19-origami-penguin.jpg" alt="19-origami-penguin" title="head creased, and ready for reverse outside fold" height="337" border="0" width="450"></p>
+<img src="./images/penguin/thumbnails/19-origami-penguin.jpg" alt="19-origami-penguin" title="head creased, and ready for reverse outside fold" height="337" border="0" width="450"></p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>Origami Penguin Step 8: Now do two (2) reverse folds to make the beak of the penguin:</p>
 	<p>
-<img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/20-origami-penguin.jpg" alt="20-origami-penguin" title="penguin head formed by reverse outside fold" height="337" border="0" width="450">
+<img src="./images/penguin/thumbnails/20-origami-penguin.jpg" alt="20-origami-penguin" title="penguin head formed by reverse outside fold" height="337" border="0" width="450">
 <br>
 <br>
-<img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/21-origami-penguin.jpg" alt="21-origami-penguin" title="beak of the penguin formed with reverse folds" height="337" border="0" width="450"></p>
-	<p><img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/21a-origami-penguin.jpg" height="337" width="450"><br>
+<img src="./images/penguin/thumbnails/21-origami-penguin.jpg" alt="21-origami-penguin" title="beak of the penguin formed with reverse folds" height="337" border="0" width="450"></p>
+	<p><img src="./images/penguin/thumbnails/21a-origami-penguin.jpg" height="337" width="450"><br>
 	  <br>
-	  <img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/21b-origami-penguin.jpg" height="300" width="450">	<br>
+	  <img src="./images/penguin/thumbnails/21b-origami-penguin.jpg" height="300" width="450">	<br>
 	  <br>
-	  <img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/21c-origami-penguin.jpg" height="317" width="450"></p>
+	  <img src="./images/penguin/thumbnails/21c-origami-penguin.jpg" height="317" width="450"></p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>Origami Penguin Step 9:	  And there you have it! An Antartic-dwelling origami penguin!</p>
-	<p><img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/22e-origami-penguin.jpg" height="300" width="400"><br>
+	<p><img src="./images/penguin/thumbnails/22e-origami-penguin.jpg" height="300" width="400"><br>
 	  <br>
-	  <img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/22b-origami-penguin.jpg" height="300" width="400">	  <br>
+	  <img src="./images/penguin/thumbnails/22b-origami-penguin.jpg" height="300" width="400">	  <br>
 	  <br>
-	  <img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/22f-origami-penguin.jpg" height="300" width="400">	  <br>
+	  <img src="./images/penguin/thumbnails/22f-origami-penguin.jpg" height="300" width="400">	  <br>
 	  <br>
-	  <img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/22c-origami-penguin.jpg" height="300" width="400">	  <br>
+	  <img src="./images/penguin/thumbnails/22c-origami-penguin.jpg" height="300" width="400">	  <br>
 	  <br>
 	  <br>
-	  <img src="Origami%20Penguin%20Folding%20Instructions%20-%20How%20to%20Make%20Origami%20Penguin_fichiers/22d-origami-penguin.jpg" height="300" width="400">
+	  <img src="./images/penguin/thumbnails/22d-origami-penguin.jpg" height="300" width="400">
 	</p><p>    
 	</p><p>	  <br>    
   </p><p>&nbsp;</p>
