"Commit penguin end before test"

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,8 @@
 						<footer>
 						<ul>
 							<li>	<a href="./whale.html" > <img src="./images/whale/thumbnails/logobal.png"/></a></li>
+					<li>	<a href="./peinguin.html" > <img src="./images/penguins/thumbnails/logobal.png"/></a></li>
+					
 						<ul>
 						</footer>
 					</section>
