--- a/src/penguin.html
+++ b/src/penguin.html
@@ -20,9 +20,9 @@
 	</head>
 
 	<body>
-    <h1>Bienvenue sur la page de l'origami baleine</h1>
+    <h1>Bienvenue sur la page de l'origami penguin</h1>
 
-    <p><img src="./images/whale/thumbnails/20-origami-whale.jpg"  alt="origami-whale" title="Origami Whale" width="450" height="338"></p>
+    <p><img src="./images/penguin/thumbnails/22e-origami-penguin.jpg"  alt="origami-peinguin" title="Origami Penguin" width="450" height="338"></p>
  
  
  
