--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
 						<footer>
 						<ul>
 							<li>	<a href="./whale.html" > <img src="./images/whale/thumbnails/logobal.png"/></a></li>
-					<li>	<a href="./peinguin.html" > <img src="./images/penguins/thumbnails/logobal.png"/></a></li>
+					<li>	<a href="./penguin.html" > <img src="./images/penguin/thumbnails/logopeng.png"/></a></li>
 					
 						<ul>
 						</footer>
