"Avant mise des liens vers partenaires"

--- a/src/penguin.html
+++ b/src/penguin.html
@@ -24,7 +24,10 @@
 
     <p><img src="./images/penguin/thumbnails/22e-origami-penguin.jpg"  alt="origami-peinguin" title="Origami Penguin" width="450" height="338"></p>
  
- 
+ 	
+    <h2>Liste des outils requis pour la réalisation de l'origami</h2>
+    <li>Une feuille d'origami <a href="http://www.creavea.com/papier-origami_boutique-loisirs-creatifs_238.html" > Si vous en avez pas ! Venez voir notre partenaire</a></li>
+    <li>Beacoup de patience ! :)</li>
  
  
  
