--- a/src/whale.html
+++ b/src/whale.html
@@ -26,7 +26,7 @@
 
     <h2>Liste des outils requis pour la réalisation de l'origami</h2>
     <li>Une paire de ciseaux</li>
-    <li>Une feuille d'origami</li>
+    <li>Une feuille d'origami <a href="http://www.creavea.com/papier-origami_boutique-loisirs-creatifs_238.html" > Si vous en avez pas ! Venez voir notre partenaire</a></li>
     <li>Beacoup de patience ! :)</li>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
