Implement research endd

--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,16 @@
 
 <html>
 	<head>
-		<title>Identity by HTML5 UP</title>
+		<title>Origami</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-
+        <!-- Balise pour le style pris sur HTML5 UP -->
 		<link rel="stylesheet" href="./assets/css/main.css" />
 
 		<noscript><link rel="stylesheet" href="./assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-loading">
-
+        <!-- Fin de Balise de Style -->
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -20,14 +20,16 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>ORIGAMI A L'ENVERS</h1>
-							<p>WHALE</p>
+							<p>Amusez-vous</p>
 						</header>
-						
+
 						<footer>
+                            <!-- Menu de sélection des origamis -->
 						<ul>
-							<li>	<a href="./whale.html" > <img src="./images/whale/thumbnails/logobal.png"/></a></li>
-					<li>	<a href="./penguin.html" > <img src="./images/penguin/thumbnails/logopeng.png"/></a></li>
-					<li> <a href="../xml/search.html"> se </a> </li>
+                            <li>	<a href="./whale.html" > <img src="./images/whale/thumbnails/logobal.png"/></a></li>
+					        <li>	<a href="./penguin.html" > <img src="./images/penguin/thumbnails/logopeng.png"/></a></li>
+					        <li> <a href="../xml/search.html"> <img src ="./images/loupe.png"/></a> </li>
+                            <!-- Fin de Menus de sélection des origamis -->
 						</ul>
 						</footer>
 					</section>
@@ -47,7 +49,7 @@
 					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
 					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
 				}
-			</script> 
+			</script>
 
 	</body>
 </html>
