--- a/src/penguin.html
+++ b/src/penguin.html
@@ -6,8 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Identity by HTML5 UP</title>
-		<meta charset="utf-8" />
+		<title>Origami de Penguin</title>
+        <!-- Balise pour le style pris sur HTML5 UP -->
+
+        <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]>
         <script src="./assets/js/html5shiv.js"></script><![endif]-->
@@ -17,21 +19,22 @@
 		<!--[if lte IE 8]>
         <link rel="stylesheet" href="./assets/css/ie8.css"/><![endif]-->
 		<noscript><link rel="stylesheet" href="./assets/css/noscript.css" /></noscript>
+        <!-- Fin de Balise de Style -->
 	</head>
-
+     <!-- Texte de L'orgami -->
 	<body>
     <h1>Bienvenue sur la page de l'origami penguin</h1>
 
     <p><img src="./images/penguin/thumbnails/22e-origami-penguin.jpg"  alt="origami-peinguin" title="Origami Penguin" width="450" height="338"></p>
- 
- 	
+
+
     <h2>Liste des outils requis pour la réalisation de l'origami</h2>
     <ul>
     <li>Une feuille d'origami <a href="http://www.creavea.com/papier-origami_boutique-loisirs-creatifs_238.html" > Si vous en avez pas ! Venez voir notre partenaire</a></li>
     <li>Beacoup de patience ! :)</li>
  </ul>
- 
- 
+
+<div id="zzzzz">
  <p>&nbsp;</p>
               <!-- InstanceEndEditable --> <!-- InstanceBeginEditable name="content5" -->
              Origami Penguin Step 1: Start with a piece of origami paper
@@ -57,8 +60,8 @@
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>Origami Penguin Step 3: 	  Now flip the model over, and repeat those
- last four (4) steps on the other side.  It will then look like the 
-photo below left.  Follow the next four (4) photos to make another 
+ last four (4) steps on the other side.  It will then look like the
+photo below left.  Follow the next four (4) photos to make another
 squash fold:</p>
 	<img src="./images/penguin/thumbnails/07-origami-penguin.jpg" alt="07-origami-penguin" title="ready for second set of squash folds" height="337" border="0" width="450">
     <br>
@@ -74,13 +77,13 @@ squash fold:</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
-	<p>Origami Penguin Step 4: Now flip the piece over and repeat that 
-squash fold on the backside.  Then unfold the model along the 
+	<p>Origami Penguin Step 4: Now flip the piece over and repeat that
+squash fold on the backside.  Then unfold the model along the
 centerline, moving point A upwards.
 	  </p>
 	<p><img src="./images/penguin/thumbnails/12-origami-penguin.jpg" alt="12-origami-penguin" title="after squash folds, ready to unfold along centerline of model" height="337" border="0" width="450">
       <br>
-      <br>	
+      <br>
       <img src="./images/penguin/thumbnails/13-origami-penguin.jpg" alt="13-origami-penguin" title="origami penguin unfolded" height="337" border="0" width="450"></p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
@@ -95,8 +98,8 @@ centerline, moving point A upwards.
               <!-- InstanceEndEditable --> <!-- InstanceBeginEditable name="content6" --><br>
               </p><p>&nbsp;</p>
               <!-- InstanceEndEditable --> <!-- InstanceBeginEditable name="content7" -->
-             Origami Penguin Step 6: Fold the flipper of the origami 
-penguin towards the front of the body as shown in the two (2) photos 
+             Origami Penguin Step 6: Fold the flipper of the origami
+penguin towards the front of the body as shown in the two (2) photos
 below:<p></p>
 	<p>
 <img src="./images/penguin/thumbnails/16-origami-penguin.jpg" alt="16-origami-penguin" title="folding the first flipper" height="337" border="0" width="450">
@@ -107,11 +110,11 @@ below:<p></p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
-	<p>Origami Penguin Step 7: Next fold the other flipper (below left).  
-We're getting close!   Just need to make the head of the penguin.   
+	<p>Origami Penguin Step 7: Next fold the other flipper (below left).
+We're getting close!   Just need to make the head of the penguin.
 Crease the head along the dotted line shown, then make a reverse outside
- fold.  It will be easier to do this if you unfold the body of the 
-penguin while folding the head down.  The result should be like the 
+ fold.  It will be easier to do this if you unfold the body of the
+penguin while folding the head down.  The result should be like the
 photo below right:</p>
 	<p>
 <img src="./images/penguin/thumbnails/18-origami-penguin.jpg" alt="18-origami-penguin" title="both flippers folded, and ready for head fold" height="337" border="0" width="450">
@@ -146,12 +149,13 @@ photo below right:</p>
 	  <br>
 	  <br>
 	  <img src="./images/penguin/thumbnails/22d-origami-penguin.jpg" height="300" width="400">
-	</p><p>    
-	</p><p>	  <br>    
+	</p><p>
+	</p><p>	  <br>
   </p><p>&nbsp;</p>
   <p>&nbsp;</p>
-  
-  <!-- Footer -->
+    <!-- Fin du Texte de L'orgami -->
+</div>
+    <!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
 							<li>&copy; Jane Doe</li>
