--- a/xml/search.html
+++ b/xml/search.html
@@ -50,7 +50,7 @@
 function validateForm() {
     txt1 = "<a href=../src/";
 	txt2 = document.getElementById("searchBox").value
-	txt3 =".html> Lient du résultat de la recherche </a>";
+	txt3 =".html> Lien du résultat de la recherche </a>";
 	txt4 = txt1 + txt2 +txt3;
 	document.getElementById("lol").innerHTML = txt4;
 	return false;
